syntax = "proto3";

package bst.v1;

import "google/protobuf/timestamp.proto";
import "location.proto";
import "user.proto";

enum PartyParticipantRole {
  PARTY_PARTICIPANT_ROLE_UNSPECIFIED = 0;
  PARTY_PARTICIPANT_ROLE_HOST        = 1;
  PARTY_PARTICIPANT_ROLE_PARTICIPANT = 2;
  PARTY_PARTICIPANT_ROLE_OBSERVER    = 3;
}

enum PartyParticipantStatus {
  PARTY_PARTICIPANT_STATUS_UNSPECIFIED = 0;
  PARTY_PARTICIPANT_STATUS_PENDING     = 1;
  PARTY_PARTICIPANT_STATUS_CONFIRMED   = 2;
  PARTY_PARTICIPANT_STATUS_CANCELLED   = 3;
}

message PartyParticipant {
  User                   user   = 1;
  PartyParticipantRole   role   = 2;
  PartyParticipantStatus status = 3;
}

message Party {
  repeated PartyParticipant participants = 1;
  Location                  location     = 2;
  int32                     fee          = 3;
  google.protobuf.Timestamp startAt      = 4;
  google.protobuf.Timestamp endAt        = 5;
}
